@startuml

class Odontologo {
- matricula: int
- nombre: String
- apellido: String
}

interface IDAO<Odontologo> {
+ registrarOdontologo(Odontologo o): Odontologo
+ listarOdontologos(Odontologo o): Odontologo
}

class OdontologoDAO{
+ registrarOdontologo(Odontologo o): Odontologo
+ listarOdontologos(Odontologo o): Odontologo
}

class OdontologoService{
+ registrarOdontologo(Odontologo o): Odontologo
+ listarOdontologos(Odontologo o): Odontologo
}

OdontologoDAO --> IDAO
OdontologoService --> IDAO
Odontologo --> OdontologoService

@enduml